--- a/about.html
+++ b/about.html
@@ -185,8 +185,8 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="col-lg-10" style="padding-left: 100px;">
     <nav class="header__menu mobile-menu">
 <ul>
-<li class="active"><a href="./index.html">Home</a></li>
-<li><a href="./about.html">About Us</a></li>
+<li><a href="./index.html">Home</a></li>
+<li class="active"><a href="./about.html">About Us</a></li>
 <li><a href="./services.html">Services</a>
 <ul class="dropdown">
 <li><a href="./about.html">Elderly Transportation</a></li>
@@ -254,7 +254,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="row">
 <div class="col-lg-12">
 <div class="breadcrumb__text">
-<h2>About Company</h2>
+<h2>About Bright Star Non Medical Transportation</h2>
 </div>
 </div>
 </div>
@@ -267,18 +267,51 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="row">
 <div class="col-lg-5">
 <div class="section-title">
-<h2>Welcome to the Freight Broker company of delevery</h2>
+  <p>A Small Introduction</p>
+<h2>Welcome to the Bright Star Non Medical Transportation</h2>
+<img src="/img/hero.jpg" alt="van"><br><br>
+<a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
+<a href="#" class="primary-btn"><span>Download Business profile & Prices</span></a>
 </div>
 </div>
 <div class="col-lg-5 offset-lg-2">
 <div class="about__company__title">
-<p>Transport offers a host of logistic management services and supply chain solutions. We
-provide innovative solutions with the best people, processes, and technology to drive
-uncommon value for your company.</p>
+<p>Started in 2022 as a family owned business, we provide professional, door-to-door non-emergency wheelchair transport which is available to the public throughout the tri-state area. Our specialized medical transportation responsibilities include but are not limited to: senior citizens, individuals who require the use of wheelchairs and parents and children with special needs. Our nemt services are for private citizens, hospitals, doctors, insurance companies/HMOs, nursing or private group homes, and assisted living facilities. We assist clients from the time of pick-up to drop-off and make sure that they get there safely and on-time.</p>
 </div>
 </div>
 </div>
-<div class="about__company__pic">
+<div class="row">
+<div class="col-lg-5">
+<div class="section-title">
+  <p>Why?</p>
+<h2>Bright Star Non Medical Transportation</h2>
+<div class="about__company__title">
+<p>Our team endeavors to provide the very best nemt transportation service for all of our customer/ partners, including dependability, convenience, safety and value, while exhibiting servant leadership to all.
+
+VA Transportation Healthcare LLC was founded to bring reliable, quality nemt transportation services to those who are in need of assisted transportation,  VA Transportation Healthcare LLC is dedicated to serving our customers through professional transportation that fills the gap between personal and public transportation.
+
+VA Transportation Healthcare LLC will provide the most dependable wheelchair transportation of the highest quality and value with direct focus on meeting the needs of our clients and will respond with promptness, sensitivity and always with the utmost integrity. At  VA Transportation Healthcare LLC, we strive to exceed your expectations.
+
+All of our staff display photo ID badges, and in standard company uniforms. Our entire staff is screened and certified comfort and safety is our primary concern.</p>
+</div>
+</div>
+</div>
+<div class="col-lg-5 offset-lg-2">
+  <p>Choose the best</p>
+<h2>Wheel Chair transportation</h2>
+<div class="about__company__title">
+<p>Our highly trained staff members are dedicated to respond with promptness, sensitivity and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes through back ground check and has completed extensive training in the handling of patients with special needs to insure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality.  VA Transportation Healthcare LLC is the leading wheelchair transport in Washington DC, Virginia & Maryland, call us for more details or to schedule an appointment.</p></div>
+</div>
+</div>
+<div class="container">
+  <h2>Our Refund Policy</h2><br>
+  <ul>
+    <li>
+      For wheelchair and ambulatory transportation services, customer must cancel 72 hours prior to service date for full refund
+    </li>
+    <li>For stretcher transportation services, customer must cancel 72 hours prior to service date to claim 50% refund.</li></ul>
+  </div>
+<!--<div class="about__company__pic">
 <div class="row">
 <div class="col-lg-4 col-md-4 col-sm-6">
 <img data-cfsrc="img/about/ac-1.jpg" alt="" style="display:none;visibility:hidden;"><noscript><img src="img/about/ac-1.jpg" alt=""></noscript>
@@ -290,8 +323,8 @@ uncommon value for your company.</p>
 <img data-cfsrc="img/about/ac-3.jpg" alt="" style="display:none;visibility:hidden;"><noscript><img src="img/about/ac-3.jpg" alt=""></noscript>
 </div>
 </div>
-</div>
-<div class="about__company__counter">
+</div>-->
+<!--f<div class="about__company__counter">
 <div class="row">
 <div class="col-lg-3 col-md-6 col-sm-6">
 <div class="counter__item">
@@ -339,12 +372,12 @@ ut labore et dolore magna aliqua.</p>
 </div>
 </div>
 </div>
-</div>
+</div>-->
 </div>
 </section>
 
 
-<section class="chooseus spad">
+<!--<section class="chooseus spad">
 <div class="container">
 <div class="row">
 <div class="col-lg-6">
@@ -514,7 +547,7 @@ page when looking at its layout.</p>
 </div>
 </div>
 </div>
-</section>
+</section>-->
 
 
 
