--- a/applyjob.html
+++ b/applyjob.html
@@ -259,41 +259,25 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <section class="contact spad">
 <div class="container">
 <div class="row">
-<!--<div class="col-lg-12">
-<div class="contact__map">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49116.39176087041!2d-86.41867791216099!3d39.69977417971648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ca48c841038a1%3A0x70cfba96bf847f0!2sPlainfield%2C%20IN%2C%20USA!5e0!3m2!1sen!2sbd!4v1586106673811!5m2!1sen!2sbd" height="460" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-</div>
-</div>-->
 </div>
 </div>
 <div style="text-align: center;">
-          <h1 style="text-align: center; padding-top: 4%;">BRIGHT STAR NON-MEDICAL TRANSPORTATION LLC</h1>
-          <h2 style="text-align: center;">ONLINE RESERVATION</h2>
-          <p style="text-align: center;">Up to 20% Off at Online Booking for Wheelchair/Stretcher Van and Ambulatory Services</p>
+          <h2 style="text-align: center; padding-top: 4%;">BRIGHT STAR NON-MEDICAL TRANSPORTATION LLC</h2>
+          <h2 style="text-align: center;">APPLY FOR JOB</h2>
+          <!--<p style="text-align: center;">Up to 20% Off at Online Booking for Wheelchair/Stretcher Van and Ambulatory Services</p>
           <button type="button" class="btn btn-success" style="color: white; background-color: #FF8F00;">New Reservation</button>
-          <button type="button" class="btn btn-success" style="color: white; background-color: #FF8F00;">Calculator</button>
+          <button type="button" class="btn btn-success" style="color: white; background-color: #FF8F00;">Calculator</button>-->
         </div>
-        <div class="container-fluid" style="padding-top: 5%; padding-left: 5%; padding-right: 5%;">
-          <h5>SEND A NEW RESERVATION REQUEST</h5>
+        <div class="container-fluid" style="padding-left: 25%; padding-right: 25%;">
+          <h4>PERSONAL INFORMATION</h4> <br>
+          <P>FIELDS WITH (*) ARE MANDATORY</P>
             <form class = "data" name="data" id="data" action="http://192.168.0.36:8000/">
             <div class="form-group" style="padding-top: 1%;">
-              <label for="exampleInput">Main Patient's Name *</label>
+              <label for="exampleInput">Name *</label>
               <input type="text" name="Patient_name" class="form-control form-control-lg" id="exampleInput" placeholder="Enter the name" required>
               <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
-            <div class="form-group" style="padding-top: 2%;">
-              <label for="exampleInput1">Number of Passangers in Total *</label>
-              <input type="text" name="No_of_Passangers" class="form-control form-control-lg" id="exampleInput1" placeholder="" required>
-              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-            </div>
-            <div class="form-group" style="padding-top: 2% ;">
-              <label for="exampleInput2">Transportation type*</label><br>
-              <select name="Type" class="form-control form-control-lg">
-                <option selected>Choose...</option>
-                <option>One-way</option>
-                <option>Round Trip</option>
-              </select><br>
-            </div>
+           
             <div class="form-group" style="padding-top: 2%;">
               <label for="exampleInputEmail1">Email*</label>
               <input type="email" name="Email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -304,75 +288,46 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
               <input type="number" name="Phone_Number" class="form-control form-control-lg" id="exampleInput4" placeholder="" required>
               <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
-            <div class="form-group" style="padding-top: 2% ;">
-              <label for="exampleInput5">Which facilities do you need during tansportation? *</label><br>
-              <select name="Facilily_Type" class="form-control form-control-lg">
-                <option selected>Wheel Chair</option>
-                <option>Stretcher</option>
-                <option>Wheel Chair & Stretcher</option>
-                <option>None</option>
-              </select>
-            </div><br>
-            <div class="form-group" style="padding-top: 2%;">
-              <label for="exampleInput6">Pickup time *</label>
-              <input type="text" name="Time_of_Pickup" class="form-control form-control-lg" id="exampleInput6" placeholder="enter time" required>
-              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-            </div><br>
-            <div>
-                <label for="date-of-survey">Date of Survey:*</label><br>
-                <input type="date" id="date-of-survey" name="Date_of_Survey" required>
-            </div><br>
             
             <div class="form-group" style="padding-top: 2%;">
-              <label for="exampleInput7">Pickup Address *</label>
+              <label for="exampleInput7">Address *</label>
               <input type="text" name="Pickup_Address" class="form-control form-control-lg" id="exampleInput7" placeholder="" required>
               <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
             <div class="form-group" style="padding-top: 2%;">
-              <label for="exampleInput8">DropOff Address *</label>
-              <input type="text" name="DropOff_Address" class="form-control form-control-lg" id="exampleInput8" placeholder="" required>
+              <label for="exampleInput7">Salary Desired *</label>
+              <input type="text" name="Pickup_Address" class="form-control form-control-lg" id="exampleInput7" placeholder="" required>
               <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-            </div>
-            <div class="form-group" style="padding-top: 2%;">
-              <label for="exampleInput9">Patient’s Weight (300lbs+ requires bariatric transport team) *</label>
-              <input type="text" name="Weight" class="form-control form-control-lg" id="exampleInput9" placeholder="" required>
-              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-            </div>
+            </div><br>
             <div class="form-group" style="padding-top: 2% ;">
-              <label for="exampleInput10">Is the patient COVID Positive or has been exposed to the virus in the past 2 weeks? *</label><br>
+              <label for="exampleInput10">Are you authorized to work in the U.S. on an unrestricted basis? *</label><br>
               <select name="Covid" class="form-control form-control-lg">
-                <option selected>No</option>
-                <option>Yes</option>
+                <option>No</option>
+                <option selected>Yes</option>
               </select>
-            </div><br>
-            <div class="form-group" style="padding-top: 2% ;">
-              <label for="exampleInput11">Does passenger need oxygen tank? (Oxygen must be administered by the caregiver) *</label><br>
-              <select name="Oxygen_tank_Requirement" class="form-control form-control-lg">
-                <option selected>No</option>
-                <option>Yes</option>
-              </select>
-            </div><br>
-            <div class="form-group" style="padding-top: 2%;">
-              <label for="exampleInput12">Are there any stairs involved to bring the patient downstairs? If yes, how many? *</label><br>
-              <input type="text" name="Stairs" class="form-control form-control-lg" id="exampleInput12" placeholder="" required>
-              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-            </div> <br>  
-            <div class="form-group" style="padding-top: 2% ;">
-              <label for="exampleInput13">Who is paying for the trip?</label><br>
-              <select name="Payment_by" class="form-control form-control-lg">
-                <option selected>Private Party</option>
-                <option>Facilily</option>
-                <option>other</option>
-              </select>
-            </div>  
-            <br><br>
-            <p>Comments</p>
+            </div><br><br>
+            <h5>Qualifications</h5><br>
             <div class="form-floating">
               <textarea class="form-control" name="Comments" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-              <label for="floatingTextarea2">Comments</label>
-            </div> 
-            <p>Please note that by submitting this inquiry form, you agree to our <a href="#" style="color: #0077B5;">privacy policy</a> and <a href="#" style="color: #0077B5;">refund policy</a></p>    
-            <button type="submit" class="btn btn-success" style="color: white; background-color: #FF8F00;">Submit</button>         
+              <label for="floatingTextarea2"></label>
+            </div> <br>
+            <h5>Special Skills</h5><br>
+            <div class="form-floating">
+              <textarea class="form-control" name="Comments" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+              <label for="floatingTextarea2"></label>
+            </div><br>
+            <h5>Reference</h5><br>
+            <div class="form-floating">
+              <textarea class="form-control" name="Comments" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+              <label for="floatingTextarea2"></label>
+            </div><br>
+            <h5>Work History</h5><br>
+            <div class="form-floating">
+              <textarea class="form-control" name="Comments" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+              <label for="floatingTextarea2"></label>
+            </div><br>
+            <!--<p>Please note that by submitting this inquiry form, you agree to our <a href="#" style="color: #0077B5;">privacy policy</a> and <a href="#" style="color: #0077B5;">refund policy</a></p>   --> 
+            <button type="submit" class="btn btn-success" style="color: white; background-color: orangered;">Submit</button>         
           </form>
           <script>
               const myForm = document.getElementById("data");
