--- a/career.html
+++ b/career.html
@@ -175,7 +175,7 @@
 <div class="col-lg-10" style="padding-left: 100px;">
     <nav class="header__menu mobile-menu">
 <ul>
-<li class="active"><a href="./index.html">Home</a></li>
+<li><a href="./index.html">Home</a></li>
 <li><a href="./about.html">About Us</a></li>
 <li><a href="./services.html">Services</a>
 <ul class="dropdown">
@@ -225,7 +225,7 @@
 </ul>
 </li>
 <li><a href="./fleet.html">Our Fleet</a></li>
-<li><a href="./career.html">Career</a></li>
+<li class="active"><a href="./career.html">Career</a></li>
 <li><a href="./contact.html">Booking</a></li>
 <!--<li><a href="#">Brochure</a></li>-->
 </ul>
@@ -251,8 +251,8 @@
                 <li>Starting salary $20 hour and up to $25 per hour with prior experience and passes the required process.</li>
                 <li>Fixed schedule/routine routes</li>
                 <li>Ability to advance your career</li>
-              </ul>
-              <h5 style="color: orangered;">Apply today for immediate consideration!</h5>
+              </ul><br>
+              <h4 style="color: orangered;">Apply today for immediate consideration!</h4><br>
               <h3>RESPONSIBILITIES:</h3>
               <p>The ability to transport passengers throughout the Maryland, Virginia, Washington D.C. areas in a safe and courteous manner
                 Greet passengers, ensure fare payment and maintain a safe environment. shifts assigned based on business need: Either 6 AM or 5 PM weekdays, and some weekends. Each employee will be required to work requested shifts, which includes weekdays, evenings, and weekend shifts.</p>
@@ -276,7 +276,9 @@
                   </li>
 
                 </ul>
-                <h5 style="color: orangered;">Interviews are open now – Apply Today!</h5>
+                <h4 style="color: orangered;">Interviews are open now – Apply Today!</h4><br>
+                <a href="/applyjob.html" class="primary-btn"><span>Apply Now</span></a>
+                <a href="/contact.html" class="primary-btn"><span>Call Now</span></a>
           </div>
           <div class="col-lg-6">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
