--- a/discount.html
+++ b/discount.html
@@ -175,7 +175,7 @@
 <div class="col-lg-10" style="padding-left: 100px;">
     <nav class="header__menu mobile-menu">
 <ul>
-<li class="active"><a href="./index.html">Home</a></li>
+<li><a href="./index.html">Home</a></li>
 <li><a href="./about.html">About Us</a></li>
 <li><a href="./services.html">Services</a>
 <ul class="dropdown">
@@ -196,7 +196,7 @@
 <li><a href="./Feedback.html">Feedback Survey</a></li>
 </ul>
 </li>
-<li><a href="./discount.html">Discounts</a></li>
+<li class="active"><a href="./discount.html">Discounts</a></li>
 <li><a href="#">Service Areas</a>
 <ul class="dropdown">
 <li><a href="./about.html">Ashburn VA</a></li>
@@ -252,13 +252,13 @@
   <img src="img/discount/discount.png" alt="Our prices">
 </div><br><br>
 <!-- Box -->
-<div class="container-fluid" style="align-items: center;">
-<div class="container-box">
+<div class="container-fluid" style="align-items: center;text-align: center;padding-left: 3%;padding-right: 3%;">
+<div class="container-box" style="border: 1px solid orangered;padding: 2%;">
   <div class="information">
-    <!-- <h2>Product Information</h2> -->
+    
     <p>Give a call to VA Transportation Healthcare Services for safe and convenient medical/non-medical transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span> now or book in advance.</p>
   </div>
-  <button class="button">Book Now</button>
+  <a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
 </div>
 </div><br><br>
 
