--- a/index.html
+++ b/index.html
@@ -599,7 +599,17 @@ your free listings for any luxury property you have.</p>
 </div>
 </section>-->
 <br>
-
+<!-- Box -->
+<div class="container-fluid" style="padding-left: 3%;padding-right: 3%;">
+<div class="container-box" style="border: 1px solid orangered;padding: 2%;">
+  <div class="information">
+    <p><span>LIMITED-TIME DISCOUNT OFFER</span>
+    BrightStar Non Medical Transportation Healthcare has reduced rates. Up to 30% off for limited time</p>
+    <a href="/discount.html" class="primary-btn"><span>See Rates</span></a>
+  </div>
+  
+</div>
+</div><br>
 
 <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg">
 <div class="container">
@@ -804,7 +814,7 @@ ut labore et dolore magna aliqua.</p>-->
             <div class="col">
                 <h5>No better place to get you healthy again</h5>
                 <h2>VISIT US</h2>
-                <h6 style="">Do you usually need a wheelchair to move around for getting medical help? We provided assisted transportation services for non emergency medical purposes. We are are your wheelchair transport specialists. 
+                <h6>Do you usually need a wheelchair to move around for getting medical help? We provided assisted transportation services for non emergency medical purposes. We are are your wheelchair transport specialists. 
                     Our drivers are trained specifically in assisting clients that require the use of wheelchairs. Our drivers are experienced and understand the needs of wheelchair users and provide personal assistance. 
                     Whether you need help to the wheelchair, personal assistance, transporting medical documents to and from your doctor, our drivers are able to provide safe reliable <span style="color: #FF8F00;">non-emergency medical transportation</span> , and state-of-the-art wheelchair accessible vehicles 24/7.</h6>
 
@@ -831,7 +841,17 @@ ut labore et dolore magna aliqua.</p>-->
 </div>
 </section>
 
-
+<!-- Box -->
+<div class="container-fluid" style="align-items: center;text-align: center;padding-left: 3%;padding-right: 3%;">
+<div class="container-box" style="border: 1px solid orangered;padding: 2%;">
+  <div class="information">
+    
+    <p>Give a call to VA Transportation Healthcare Services for safe and convenient medical/non-medical transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span> now or book in advance.</p>
+  </div>
+  <a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
+</div>
+</div>
+<br><br>
 <footer class="footer">
 <div class="container">
 <div class="row">
