--- a/testimonials.html
+++ b/testimonials.html
@@ -175,7 +175,7 @@
 <div class="col-lg-10" style="padding-left: 100px;">
     <nav class="header__menu mobile-menu">
 <ul>
-<li class="active"><a href="./index.html">Home</a></li>
+<li><a href="./index.html">Home</a></li>
 <li><a href="./about.html">About Us</a></li>
 <li><a href="./services.html">Services</a>
 <ul class="dropdown">
@@ -191,7 +191,7 @@
 
 </ul>
 </li>
-<li><a href="#">Testinomials</a>
+<li class="active"><a href="#">Testinomials</a>
 <ul class="dropdown">
 <li><a href="./Feedback.html">Feedback Survey</a></li>
 </ul>
